add contract and implementation for slot update and delete
